# conformer

./: .gitignore  README.md  example.py  inference.py  pyproject.toml  run.py  text_processor.py  train.py  wrapper.py
configs/: config.yaml
configs/data/: custom.yaml  librispeech.yaml
configs/decoder/: beam_search.yaml  greedy.yaml
configs/model/: conformer.yaml
configs/optimizer/: adam.yaml  adamw.yaml
data/: custom_dataloader.py  custom_dataset.py  dataset.py
model/: conformer.py  conformer_block.py  conformer_encoder.py  decoders.py
model/modules/: attention.py  convolution.py  feed_forward.py  subsampling.py  utils.py
text_processor/: processor.py
