[project]
name = "conformer"
version = "0.1.0"
description = "Implementation of Conformer"
authors = [
    {name = "RadicallyUprooted",email = "minakami1984@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "lightning (>=2.5.2,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
