[project]
name = "conformer"
version = "0.1.0"
description = "Implementation of Conformer"
authors = [
    {name = "RadicallyUprooted",email = "minakami1984@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "lightning (>=2.5.2,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "wandb (>=0.21.0,<0.22.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "torchmetrics (>=1.7.4,<2.0.0)",
    "flashlight-text (>=0.0.7,<0.0.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "model" },
    { include = "text_processor" },
]
